ECL 1.0:
========

* Bugs fixed:

 - STREAMP signals an error for Gray streams.


;;; Local Variables: ***
;;; mode:text ***
;;; fill-column:79 ***
;;; End: ***