@@ -5,6 +5,7 @@ ECL 1.0:
 
  - STREAMP signals an error for Gray streams.
 
+ - ENOUGH-NAMESTRING provided too large directory names (Contributed by Tim S)
 
 ;;; Local Variables: ***
 ;;; mode:text ***
